--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,15 +12,9 @@
       <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to 'Home', root_path %></li>
-          <li class="active"><%= link_to 'Alternatif', alternatives_path %></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Kriteria<span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><%= link_to 'List Kriteria', criterions_path %></li>
-              <li class="divider"></li>
-              <li><%= link_to 'Perbandingan Kriteria', root_path %></li>
-            </ul>
-          </li>
+          <li><%= link_to 'Alternatif', alternatives_path %></li>
+          <li><%= link_to 'Kriteria', criterions_path %></li>
+          <li><%= link_to 'Banding Kriteria', criterion_comparisons_path %></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
