--- a/app/views/criterion_comparisons/_form.html.erb
+++ b/app/views/criterion_comparisons/_form.html.erb
@@ -2,14 +2,14 @@
 <%= form_for @cc, :html => {:class => "form-horizontal form-label-left"} do |f| %>
   <%= render "shared/errors", object: @cc %>
   <div class="form-group">
-    <%= f.label :criterion_id, "Nama Kriteria 1 :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
+    <%= f.label '', "Nama Kriteria 1 :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
       <div class="col-md-6 col-sm-6 col-xs-12">
           <%= collection_select('', '', Criterion.where(id: @nowCri[0]), :id, :name, {}, {:class => "form-control", disabled: true}) %>
       </div>
   </div>
   <div class="ln_solid"></div>
   <div class="form-group">
-    <%= f.label :comparison, "Perbandingan :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
+    <%= f.label '', "Perbandingan :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
       <div class="col-md-6 col-sm-6 col-xs-12">
         <%= f.number_field :comparison, class: "form-control select2" %>
       </div>
