--- a/app/views/criterions/index.html.erb
+++ b/app/views/criterions/index.html.erb
@@ -21,8 +21,9 @@
               <tr>
                 <td><%= nomor %></td>
                 <td><%= c.name %></td>
-                <td><%= link_to 'Ubah', edit_criterion_path(c), class: 'btn btn-warning' %>   <%= link_to 'Hapus', c, method: :delete, class: 'btn btn-danger' %></td>
-                <td></td>
+                <td><%= link_to 'Ubah', edit_criterion_path(c), class: 'btn btn-warning' %>
+                  &emsp;
+                  <%= link_to 'Hapus', c, method: :delete, class: 'btn btn-danger' %></td>
               </tr>
               <% nomor+=1 %>
               <% end %>
