--- a/app/views/alternative_criterion_comparisons/edit.html.erb
+++ b/app/views/alternative_criterion_comparisons/edit.html.erb
@@ -1,5 +1,5 @@
 <% @nowCri = @curretCri %>
 <%= render 'form' %>
-<% @url = alternatives_url %>
+<% @url = alternative_criterion_comparisons_url %>
 <% @aksi = @alternative.name %>
 <% @objek = "Rubah Perbandingan" %>
