--- a/app/views/criterion_comparisons/_form.html.erb
+++ b/app/views/criterion_comparisons/_form.html.erb
@@ -27,6 +27,7 @@
   <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
       <%= f.submit "Selanjutnya", class: "btn btn-primary pull-right" %>
+      <%= link_to 'Kembali', @url, class: 'btn btn-danger' %>
     </div>
   </div>
 <% end %>
