--- a/app/views/criterions/index.html.erb
+++ b/app/views/criterions/index.html.erb
@@ -1,6 +1,19 @@
 <% @url = alternatives_url %>
 <% @aksi = "List" %>
 <% @objek = "Kriteria" %>
+
+<% if flash[:notice] %>
+  <div class="callout callout-info">
+    <p><%= flash[:notice] %></p>
+  </div>
+<% end %>
+
+<% if flash[:warning] %>
+  <div class="callout callout-danger">
+    <p><%= flash[:warning] %></p>
+  </div>
+<% end %>
+
 <%= link_to 'Tambah Kriteria', new_criterion_path, class: 'btn btn-primary pull-right' %>
 <hr>
 <div class="row">
