--- a/app/views/alternative_criterion_comparisons/index.html.erb
+++ b/app/views/alternative_criterion_comparisons/index.html.erb
@@ -1,5 +1,7 @@
-
-<%= link_to 'Lengkapi Perbandingan', new_criterion_comparison_path, class: 'btn btn-primary pull-right' %>
+<% @url = alternative_alternative_criterion_comparisons_url %>
+<% @aksi = "Normalisasi" %>
+<% @objek = @alternative.name %>
+<%= link_to 'Lengkapi Perbandingan', new_alternative_alternative_criterion_comparison_path, class: 'btn btn-primary pull-right' %>
 <hr>
 <div class="row">
   <div class="col-xs-12">
