--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <a href="../../index2.html" class="navbar-brand"><b>Admin</b>LTE</a>
+        <%= link_to '<b>STPK</b>AHP'.html_safe, root_path, class: 'navbar-brand' %>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
           <i class="fa fa-bars"></i>
         </button>
@@ -11,10 +11,10 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
         <ul class="nav navbar-nav">
-          <li class="active"><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'Alternatif', alternatives_path %></li>
-          <li><%= link_to 'Kriteria', criterions_path %></li>
-          <li><%= link_to 'Banding Kriteria', criterion_comparisons_path %></li>
+          <li class = "<%= 'active' if controller?('welcome')%>"><%= link_to 'Home', root_path %></li>
+          <li class = "<%= 'active' if controller?('alternatives', 'alternative_criterion_comparisons')%>"><%= link_to 'Alternatif', alternatives_path %></li>
+          <li class = "<%= 'active' if controller?('criterions')%>"> <%= link_to 'Kriteria', criterions_path %></li>
+          <li class = "<%= 'active' if controller?('criterion_comparisons')%>"><%= link_to 'Banding Kriteria', criterion_comparisons_path %></li>
         </ul>
       </div>
       <!-- /.navbar-collapse -->
