--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,74 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+
+  <div class="row">
+    <div class="col-md-6">
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title">Matriks Average Kriteria Per Alternatif</h3>
+        </div>
+        <div class="box-body table-responsive no-padding">
+          <table class="table table-hover">
+            <thead>
+              <tr>
+                <th>#</th>
+                <% @criterions.each do |c| %>
+                <th><%= c.name %></th>
+                <% end %>
+              </tr>
+            </thead>
+            <tbody>
+              <% @alternative = @alternatives.first %>
+              <% @dataAve.each do |d| %>
+              <tr>
+                <th><%= @alternative.name %></th>
+                <% d.each_with_index do |dd, i| %>
+                <td><%= dd.round(3) %></td>
+                <% end %>
+                <% @alternative = @alternative.next %>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title">Matriks Average Kriteria</h3>
+        </div>
+        <div class="box-body table-responsive no-padding">
+          <table class="table table-hover">
+
+            <tbody>
+              <% @aveCri.each do |d| %>
+              <tr>
+                <td><%= d.round(3) %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="box">
+        <div class="box-header with-border">
+          <h3 class="box-title">Hasil</h3>
+        </div>
+        <div class="box-body table-responsive no-padding">
+          <table class="table table-hover">
+
+            <tbody>
+              <% @alternatives.each_with_index do |al, i| %>
+              <tr>
+                <th><%= al.name %></th>
+                <td><%= @result[i][0].round(3) %></td>
+              </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
