--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <%= csrf_meta_tags %>
+  <%= javascript_include_tag 'Chart.bundle' %>
+  <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
 </head>
 <body class="hold-transition skin-red layout-top-nav">
@@ -32,6 +34,7 @@
   </div>
   <%= render 'layouts/footer' %>
 </div>
+
   <%= javascript_include_tag 'application' %>
 </body>
 </html>
