--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,20 @@
+<% @aksi = "Hasil" %>
+<% @objek = "Beranda" %>
+
+
+<% unless @dataAve == nil %>
+<div class="row">
+  <div class="col-md-12">
+    <div class="box">
+      <div class="box-header with-border">
+        <h3 class="box-title">Diagram Hasil</h3>
+      </div>
+      <div class="box-body table-responsive no-padding">
+          <%= column_chart @reschart %>
+      </div>
+    </div>
+  </div>
+</div>
 
   <div class="row">
     <div class="col-md-6">
@@ -72,3 +89,17 @@
       </div>
     </div>
   </div>
+
+<% else %>
+    <% if flash[:notice] %>
+      <div class="callout callout-info">
+        <p><%= flash[:notice] %></p>
+      </div>
+    <% end %>
+
+    <% if flash[:warning] %>
+      <div class="callout callout-danger">
+        <p><%= flash[:warning] %></p>
+      </div>
+    <% end %>
+  <% end %>
