--- a/app/views/alternative_criterion_comparisons/index.html.erb
+++ b/app/views/alternative_criterion_comparisons/index.html.erb
@@ -3,6 +3,7 @@
 <% @objek = @alternative.name %>
 <%= link_to 'Lengkapi Perbandingan', new_alternative_alternative_criterion_comparison_path, class: 'btn btn-primary pull-right' %>
 <hr>
+<% unless @data.empty? %>
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
@@ -82,3 +83,4 @@
       </div>
     </div>
   </div>
+<% end %>
