--- a/app/views/criterion_comparisons/index.html.erb
+++ b/app/views/criterion_comparisons/index.html.erb
@@ -14,6 +14,7 @@
 <% @objek = "Kriteria" %>
 <%= link_to 'Lengkapi Perbandingan', new_criterion_comparison_path, class: 'btn btn-primary pull-right' %>
 <hr>
+<% unless @data.empty? %>
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
@@ -93,3 +94,4 @@
       </div>
     </div>
   </div>
+<% end %>
