--- a/app/views/criterions/index.html.erb
+++ b/app/views/criterions/index.html.erb
@@ -16,6 +16,7 @@
 
 <%= link_to 'Tambah Kriteria', new_criterion_path, class: 'btn btn-primary pull-right' %>
 <hr>
+<% unless @criterions.first == nil %>
 <div class="row">
   <div class="col-xs-12">
     <div class="box">
@@ -46,3 +47,4 @@
       </div>
     </div>
   </div>
+<% end %>
