--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,9 @@
   <%= csrf_meta_tags %>
   <%= javascript_include_tag 'Chart.bundle' %>
   <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
-  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'true' %>
 </head>
-<body class="hold-transition skin-red layout-top-nav">
+<body class="hold-transition skin-purple layout-top-nav">
 <div class="wrapper">
 <%= render 'layouts/header' %>
   <div class="content-wrapper">
