--- a/app/views/alternative_criterion_comparisons/new.html.erb
+++ b/app/views/alternative_criterion_comparisons/new.html.erb
@@ -30,6 +30,7 @@
     <hr>
 
     <hr>
+    <% unless @ccs.first == nil %>
     <div class="row">
       <div class="col-xs-12">
         <div class="box">
@@ -64,6 +65,7 @@
           </div>
         </div>
       </div>
+    <% end %>
     <% else %>
     <div class="callout callout-danger">
       <h4>Error!</h4>
