--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -1,6 +1,4 @@
-<%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'true' %>
-<body class="hold-transition login-page">
-<%= yield %>
+<%= stylesheet_link_tag 'application', media: 'all' %>
 <%= javascript_include_tag 'application' %>
 <script>
   $(function () {
@@ -11,4 +9,6 @@
     });
   });
 </script>
+<body class="hold-transition login-page">
+<%= yield %>
 </body>
