setarakan dengan yang di deploy

--- a/app/views/criterions/_form.html.erb
+++ b/app/views/criterions/_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-group">
     <%= f.label :name, "Nama Kriteria :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
       <div class="col-md-6 col-sm-6 col-xs-12">
-        <%= f.text_field :name, class: "form-control select2" %>
+        <%= f.text_field :name, { autofocus: :true, class: "form-control select2"} %>
       </div>
   </div>
   <div class="ln_solid"></div>
