--- a/app/views/alternative_criterion_comparisons/index.html.erb
+++ b/app/views/alternative_criterion_comparisons/index.html.erb
@@ -1,6 +1,7 @@
 <% @url = alternative_alternative_criterion_comparisons_url %>
 <% @aksi = "Normalisasi" %>
 <% @objek = @alternative.name %>
+<%= link_to 'Ke Kriteria', alternatives_path, class: 'btn btn-primary pull-left' %>
 <%= link_to 'Lengkapi Perbandingan', new_alternative_alternative_criterion_comparison_path, class: 'btn btn-primary pull-right' %>
 <hr>
 <% unless @data.empty? %>
