--- a/app/views/alternatives/index.html.erb
+++ b/app/views/alternatives/index.html.erb
@@ -36,9 +36,12 @@
                 <td><%= a.name %></td>
                 <td><%= link_to 'Perbandingan', alternative_alternative_criterion_comparisons_path(a), class: 'btn btn-primary' %>
                   &emsp;
+                  <span class="badge bg-yellow"><%= ((AlternativeCriterionComparison.where(alternative_id: a.id).count.to_f / @jumlah ) * 100.to_f).round(2) unless @allKri == 0 %> %</span>
+                  &emsp;
                   <%= link_to 'Ubah', edit_alternative_path(a), class: 'btn btn-warning' %>
                   &emsp;
-                  <%= link_to 'Hapus', a, method: :delete, class: 'btn btn-danger' %></td>
+                  <%= link_to 'Hapus', a, method: :delete, class: 'btn btn-danger' %>
+                  </td>
               </tr>
               <% nomor+=1 %>
               <% end %>
