--- a/app/views/criterion_comparisons/_form.html.erb
+++ b/app/views/criterion_comparisons/_form.html.erb
@@ -11,7 +11,7 @@
   <div class="form-group">
     <%= f.label '', "Perbandingan :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
       <div class="col-md-6 col-sm-6 col-xs-12">
-        <%= f.number_field :comparison, class: "form-control select2" %>
+        <%= f.number_field :comparison, { autofocus: :true, class: "form-control select2", step: :any} %>
       </div>
   </div>
   <div class="ln_solid"></div>
