perbaiki salah perbandingan

--- a/app/views/alternative_criterion_comparisons/_form.html.erb
+++ b/app/views/alternative_criterion_comparisons/_form.html.erb
@@ -1,11 +1,11 @@
 
 <hr>
-<%= form_for [@alternative, @acc], :html => {:class => "form-horizontal form-label-left"} do |f| %>
+<%= form_for [@criterion, @acc], :html => {:class => "form-horizontal form-label-left"} do |f| %>
   <%= render "shared/errors", object: @acc %>
   <div class="form-group">
-    <%= f.label '', "Nama Kriteria 1 :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
+    <%= f.label '', "Nama Alternatif 1 :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
       <div class="col-md-6 col-sm-6 col-xs-12">
-          <%= collection_select('', '', Criterion.where(id: @nowCri[0]), :id, :name, {}, {:class => "form-control", disabled: true}) %>
+          <%= collection_select('', '', Alternative.where(id: @nowAlt[0]), :id, :name, {}, {:class => "form-control", disabled: true}) %>
       </div>
   </div>
   <div class="ln_solid"></div>
@@ -17,15 +17,15 @@
   </div>
   <div class="ln_solid"></div>
   <div class="form-group">
-    <%= f.label :other_criterion_id, "Nama Kriteria 2 :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
+    <%= f.label :other_criterion_id, "Nama Alternatif 2 :", class: "control-label col-md-3 col-sm-3 col-xs-12" %>
       <div class="col-md-6 col-sm-6 col-xs-12">
-          <%= collection_select('', '', Criterion.where(id: @nowCri[1]), :id, :name, {}, {:class => "form-control", disabled: true}) %>
+          <%= collection_select('', '', Alternative.where(id: @nowAlt[1]), :id, :name, {}, {:class => "form-control", disabled: true}) %>
       </div>
   </div>
   <div class="ln_solid"></div>
-  <%= hidden_field(:alternative_criterion_comparison, :alternative_id, :value => @alternative.id) %>
-  <%= hidden_field(:alternative_criterion_comparison, :criterion_id, :value => @nowCri[0]) %>
-  <%= hidden_field(:alternative_criterion_comparison, :other_criterion_id, :value => @nowCri[1]) %>
+  <%= hidden_field(:alternative_criterion_comparison, :criterion_id, :value => @criterion.id) %>
+  <%= hidden_field(:alternative_criterion_comparison, :alternative_id, :value => @nowAlt[0]) %>
+  <%= hidden_field(:alternative_criterion_comparison, :other_alternative_id, :value => @nowAlt[1]) %>
   <div class="form-group">
     <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
       <%= f.submit "Selanjutnya", class: "btn btn-primary pull-right" %>
