--- a/app/views/alternative_criterion_comparisons/edit.html.erb
+++ b/app/views/alternative_criterion_comparisons/edit.html.erb
@@ -1,4 +1,4 @@
-<% @nowCri = @curretCri %>
+<% @nowAlt = @curretAlt %>
 <%= render 'form' %>
 <% @url = alternative_criterion_comparisons_url %>
 <% @aksi = @alternative.name %>
