--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,8 +12,8 @@
       <div class="collapse navbar-collapse pull-left" id="navbar-collapse">
         <ul class="nav navbar-nav">
           <li class = "<%= 'active' if controller?('welcome')%>"><%= link_to 'Home', root_path %></li>
-          <li class = "<%= 'active' if controller?('alternatives', 'alternative_criterion_comparisons')%>"><%= link_to 'Alternatif', alternatives_path %></li>
-          <li class = "<%= 'active' if controller?('criterions')%>"> <%= link_to 'Kriteria', criterions_path %></li>
+          <li class = "<%= 'active' if controller?('alternatives')%>"><%= link_to 'Alternatif', alternatives_path %></li>
+          <li class = "<%= 'active' if controller?('criterions', 'alternative_criterion_comparisons')%>"> <%= link_to 'Kriteria', criterions_path %></li>
           <li class = "<%= 'active' if controller?('criterion_comparisons')%>"><%= link_to 'Banding Kriteria', criterion_comparisons_path %></li>
         </ul>
       </div>
