perbaiki salah perbandingan

--- a/app/views/alternative_criterion_comparisons/new.html.erb
+++ b/app/views/alternative_criterion_comparisons/new.html.erb
@@ -70,6 +70,6 @@
     <div class="callout callout-danger">
       <h4>Error!</h4>
 
-      <p>Kriteria belum mencukupi untuk perbandingan!</p>
+      <p>Alternatif belum mencukupi untuk perbandingan!</p>
     </div>
     <% end %>
