--- a/app/views/alternatives/index.html.erb
+++ b/app/views/alternatives/index.html.erb
@@ -37,7 +37,7 @@
                 <td>
                   <%= link_to 'Ubah', edit_alternative_path(a), class: 'btn btn-warning' %>
                   &emsp;
-                  <%= link_to 'Hapus', a, method: :delete, class: 'btn btn-danger' %>
+                  <%= link_to 'Hapus', a, method: :delete, class: 'btn btn-danger', data: { confirm: 'Menghapus alternatif akan menghapus semua perbandingan yang terkait !' } %>
                   </td>
               </tr>
               <% nomor+=1 %>
