--- a/app/views/criterions/index.html.erb
+++ b/app/views/criterions/index.html.erb
@@ -43,7 +43,7 @@
               <td>
                 <%= link_to 'Ubah', edit_criterion_path(c), class: 'btn btn-warning' %>
                 &emsp;
-                <%= link_to 'Hapus', c, method: :delete, class: 'btn btn-danger' %>
+                <%= link_to 'Hapus', c, method: :delete, class: 'btn btn-danger', data: { confirm: 'Menghapus kriteria akan menghapus semua perbandingan yang terkait !' } %>
                 </td>
             </tr>
             <% nomor+=1 %>
