--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 <% @objek = "Beranda" %>
 
 
-<% unless @dataAve == nil %>
+<% unless @dataAve.empty? %>
 <div class="row">
   <div class="col-md-12">
     <div class="box">
