--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
     <div class="col-md-6">
       <div class="box">
         <div class="box-header with-border">
-          <h3 class="box-title">Matriks Average Kriteria Per Alternatif</h3>
+          <h3 class="box-title">Matriks Average Alternatif per Kriteria</h3>
         </div>
         <div class="box-body table-responsive no-padding">
           <table class="table table-hover">
