--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,6 @@
     <div class="pull-right hidden-xs">
       <b>Version</b> 1.0.0
     </div>
-    <strong>&copy; <%= Time.current.year %> Developed by Kelompok Tugas AHP STPK</strong>
+    <strong>&copy; <%= Time.current.year %> Developed by Kelompok Tugas AHP STPK Sistem Informasi Universitas Andalas</strong>
   </div>
 </footer>
