--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,6 +15,7 @@
           <li class = "<%= 'active' if controller?('alternatives')%>"><%= link_to 'Alternatif', alternatives_path %></li>
           <li class = "<%= 'active' if controller?('criterions', 'alternative_criterion_comparisons')%>"> <%= link_to 'Kriteria', criterions_path %></li>
           <li class = "<%= 'active' if controller?('criterion_comparisons')%>"><%= link_to 'Banding Kriteria', criterion_comparisons_path %></li>
+          <li class = "<%= 'active' if controller?('tentang')%>"><%= link_to 'Tentang Aplikasi', tentang_path %></li>
         </ul>
       </div>
       <div class="navbar-custom-menu">
