--- a/app/views/tentang/index.html.erb
+++ b/app/views/tentang/index.html.erb
@@ -13,7 +13,7 @@
             <div class="box-body">
             <p>Aplikasi ini dekmbangkan dari nol oleh Mahasiswa <b>Jurusan Sistem Informasi Fakultas Teknologi Informasi Universitas Andalas</b> untuk memenuhi tugas matakuliah Sistem dan Teknik Pendukung Keputusan, dengan anggota :</p>
               <h4>1. Muhammad Fauzi (1411522014)</h4>
-              <h4>2. Fadli Arif Deliyus (1411522019)</h4>
+              <h4>2. Fadhli Arif Deliyus (1411522019)</h4>
               <h4>3. Zera Olviana (1411521027)</h4>
             </div>
             <!-- /.box-body -->
