--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -45,7 +45,7 @@
       <div class="inner">
         <h3><%= (@consist * 100).round(3) %> %</h3>
 
-        <p>Konsistensi</p>
+        <p>Inkonsistensi</p>
       </div>
     </div>
   </div>
