Edited typo and readme

--- a/app/views/tentang/index.html.erb
+++ b/app/views/tentang/index.html.erb
@@ -12,9 +12,9 @@
             <!-- /.box-header -->
             <div class="box-body">
             <p>Aplikasi ini dekmbangkan dari nol oleh Mahasiswa <b>Jurusan Sistem Informasi Fakultas Teknologi Informasi Universitas Andalas</b> untuk memenuhi tugas matakuliah Sistem dan Teknik Pendukung Keputusan, dengan anggota :</p>
-              <h4>1. Muhammad Fauzi (1411522014)</h4>
-              <h4>2. Fadhli Arif Deliyus (1411522019)</h4>
-              <h4>3. Zera Olviana (1411521027)</h4>
+              <b>1. Muhammad Fauzi (1411522014)</b>
+              <b>2. Fadhli Arif Deliyus (1411522019)</b>
+              <b>3. Zera Olviana (1411521027)</b>
             </div>
             <!-- /.box-body -->
           </div>
@@ -31,7 +31,7 @@
             <!-- /.box-header -->
             <div class="box-body">
               <p>Aplikasi Sistem Pendukung Keputusan ini dibuat dengan metode Analytic Hierarchy Process (AHP), selanjutnya dikembangkan dengan bahasa Ruby dengan Framework Ruby on Rails dan interface menggunakan template dasar AdminLTE.</p>
-              <p>Hak cipta sejatinya hanya milik Allah SWT, siapa saja boleh mengembangkan aplikasi kini menjadi aplikasi yang lebih baik.</p>
+              <p>Hak cipta sejatinya hanya milik Allah SWT, siapa saja boleh mengembangkan aplikasi ini menjadi aplikasi yang lebih baik.</p>
               <p>Kontribusi di <a href='https://github.com/fauzipadlaw/spk-ahp' target='_blank'>Github</a>.</p>
             </div>
             <!-- /.box-body -->
