--- a/app/views/tentang/index.html.erb
+++ b/app/views/tentang/index.html.erb
@@ -12,9 +12,9 @@
             <!-- /.box-header -->
             <div class="box-body">
             <p>Aplikasi ini dekmbangkan dari nol oleh Mahasiswa <b>Jurusan Sistem Informasi Fakultas Teknologi Informasi Universitas Andalas</b> untuk memenuhi tugas matakuliah Sistem dan Teknik Pendukung Keputusan, dengan anggota :</p>
-              <b>1. Muhammad Fauzi (1411522014)</b>
-              <b>2. Fadhli Arif Deliyus (1411522019)</b>
-              <b>3. Zera Olviana (1411521027)</b>
+              <b>1. Muhammad Fauzi (1411522014)</b><br>
+              <b>2. Fadhli Arif Deliyus (1411522019)</b><br>
+              <b>3. Zera Olviana (1411521027)</b><br>
             </div>
             <!-- /.box-body -->
           </div>
