--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="main-footer">
   <div class="container">
     <div class="pull-right hidden-xs">
-      <b>Version</b> 1.0.0
+      <b>Version</b> 1.0.0 (preview)
     </div>
     <strong>&copy; <%= Time.current.year %> Developed by Kelompok Tugas AHP STPK Sistem Informasi Universitas Andalas</strong>
   </div>
