--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="navbar navbar-static-top">
     <div class="container">
       <div class="navbar-header">
-        <%= link_to '<b>STPK</b>AHP'.html_safe, root_path, class: 'navbar-brand' %>
+        <%= link_to '<b>SPK</b> AHP'.html_safe, root_path, class: 'navbar-brand' %>
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
           <i class="fa fa-bars"></i>
         </button>
