fixed edit perbandingan alternatif

--- a/app/views/alternative_criterion_comparisons/edit.html.erb
+++ b/app/views/alternative_criterion_comparisons/edit.html.erb
@@ -1,5 +1,5 @@
 <% @nowAlt = @curretAlt %>
 <%= render 'form' %>
-<% @url = alternative_criterion_comparisons_url %>
-<% @aksi = @alternative.name %>
+<% @url = criterion_alternative_criterion_comparisons_url %>
+<% @aksi = @criterion.name %>
 <% @objek = "Rubah Perbandingan" %>
