edited tentang snek

--- a/app/views/tentang/index.html.erb
+++ b/app/views/tentang/index.html.erb
@@ -31,8 +31,7 @@
             <!-- /.box-header -->
             <div class="box-body">
               <p>Aplikasi Sistem Pendukung Keputusan ini dibuat dengan metode Analytic Hierarchy Process (AHP), selanjutnya dikembangkan dengan bahasa Ruby dengan Framework Ruby on Rails dan interface menggunakan template dasar AdminLTE.</p>
-              <p>Hak cipta sejatinya hanya milik Allah SWT, siapa saja boleh mengembangkan aplikasi ini menjadi aplikasi yang lebih baik.</p>
-              <p>Kontribusi di <a href='https://github.com/fauzipadlaw/spk-ahp' target='_blank'>Github</a>.</p>
+              <p>Hak cipta sejatinya hanya milik Allah SWT, source code bisa didapatkan di <a href='https://github.com/fauzipadlaw/spk-ahp' target='_blank'>Github</a></p>
             </div>
             <!-- /.box-body -->
           </div>
